--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build APK (Final Fix)
+name: Build APK (Stable)
 
 on:
   push:
@@ -50,20 +50,24 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
+          # Cython 0.29.36은 Kivy 빌드에서 가장 검증된 버전입니다.
           pip install "cython<3.0.0" buildozer
 
       - name: Build with Buildozer
         env:
-          # Exit code 2 방지를 위해 메모리 할당을 더 명확하게 지정
           JAVA_OPTS: "-Xmx2048m"
           GRADLE_OPTS: "-Dorg.gradle.jvmargs=-Xmx2048m"
         run: |
-          # 빌드 전 spec 파일 자동 교정
+          # 1. 기존 빌드 찌꺼기 제거 (중요: Exit code 2 방지)
+          buildozer android clean || true
+          
+          # 2. spec 파일 강제 수정 (따옴표 에러 방지)
           sed -i 's/^[# ]*android.archs =.*/android.archs = arm64-v8a/' buildozer.spec
           sed -i 's/^[# ]*android.accept_sdk_license =.*/android.accept_sdk_license = True/' buildozer.spec
-          # 빌드 실행
+          
+          # 3. 빌드 실행
           yes y | buildozer -v android debug
-
+          
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
