--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build APK (Stable)
+name: Build APK (Fix Version Error)
 
 on:
   push:
@@ -50,7 +50,6 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          # Cython 0.29.36은 Kivy 빌드에서 가장 검증된 버전입니다.
           pip install "cython<3.0.0" buildozer
 
       - name: Build with Buildozer
@@ -58,16 +57,18 @@ jobs:
           JAVA_OPTS: "-Xmx2048m"
           GRADLE_OPTS: "-Dorg.gradle.jvmargs=-Xmx2048m"
         run: |
-          # 1. 기존 빌드 찌꺼기 제거 (중요: Exit code 2 방지)
+          # 1. 이전 빌드 초기화
           buildozer android clean || true
           
-          # 2. spec 파일 강제 수정 (따옴표 에러 방지)
+          # 2. spec 파일의 핵심 오류(Version 누락 등) 자동 보정
+          # 버전 정보가 없을 경우를 대비해 강제 삽입
+          sed -i 's/^[# ]*version =.*/version = 1.0.0/' buildozer.spec
           sed -i 's/^[# ]*android.archs =.*/android.archs = arm64-v8a/' buildozer.spec
           sed -i 's/^[# ]*android.accept_sdk_license =.*/android.accept_sdk_license = True/' buildozer.spec
           
           # 3. 빌드 실행
           yes y | buildozer -v android debug
-          
+
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
