--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build APK (Fully Automated)
+name: Build APK (Stable Version)
 
 on:
   push:
@@ -11,7 +11,8 @@ concurrency:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    # Ubuntu 24.04의 헤더 충돌을 피하기 위해 22.04로 변경합니다.
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -21,15 +22,6 @@ jobs:
           sudo docker image prune -a -f
           sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc
           sudo apt-get clean
-
-      - name: Setup Swap
-        run: |
-          sudo swapoff -a || true
-          sudo rm -f /swapfile
-          sudo dd if=/dev/zero of=/swapfile bs=1M count=4096
-          sudo chmod 600 /swapfile
-          sudo mkswap /swapfile
-          sudo swapon /swapfile
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -62,23 +54,19 @@ jobs:
           JAVA_OPTS: "-Xmx2048m"
           GRADLE_OPTS: "-Dorg.gradle.jvmargs=-Xmx2048m"
         run: |
-          # 1. 빌드 캐시 정리
+          # 1. 빌드 캐시 초기화
           buildozer android clean || true
           
-          # 2. spec 파일 자동 보정 (사용자 요청 반영)
-          # 버전 설정
+          # 2. buildozer.spec 자동 수정 (사용자 요청 반영)
+          # requirements 라인을 찾아 사용자님의 요청사항(python3, kivy, requests 등)으로 강제 교체합니다.
+          sed -i 's|^requirements =.*|requirements = python3,kivy==2.2.1,requests,certifi,openssl|' buildozer.spec
+          
+          # 기타 필수 설정 보정
           sed -i 's/^[# ]*version =.*/version = 1.0.0/' buildozer.spec
-          # 아키텍처 설정
           sed -i 's/^[# ]*android.archs =.*/android.archs = arm64-v8a/' buildozer.spec
-          # 라이선스 자동 승인
           sed -i 's/^[# ]*android.accept_sdk_license =.*/android.accept_sdk_license = True/' buildozer.spec
           
-          # [핵심] 라이브러리 의존성(requirements) 자동 수정
-          # 기본 kivy와 함께 자주 쓰이는 requests, openssl 등을 포함하도록 설정합니다.
-          sed -i 's|^requirements =.*|requirements = python3,kivy==2.2.1,requests,certifi,urllib3,openssl,hostpython3|' buildozer.spec
-          
-          # 3. 실제 빌드 실행
-          export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:.
+          # 3. 빌드 실행
           yes y | buildozer -v android debug
 
       - name: Upload APK
