--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,76 +1,23 @@
-name: Build APK (Dependency Fix)
-
-on:
-  push:
-    branches: [ main ]
-  workflow_dispatch:
-
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
-
-jobs:
-  build:
-    runs-on: ubuntu-22.04
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Free Disk Space
-        run: |
-          sudo docker image prune -a -f
-          sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc
-          sudo apt-get clean
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-
-      - name: Install system dependencies
-        run: |
-          sudo apt-get update
-          # libunwind-dev를 명시적으로 추가하여 의존성 오류를 해결합니다.
-          sudo apt-get install -y build-essential git python3-dev libsdl2-dev libsdl2-image-dev \
-            libsdl2-mixer-dev libsdl2-ttf-dev libportmidi-dev libswscale-dev libavformat-dev \
-            libavcodec-dev zlib1g-dev libffi-dev libssl-dev libutf8proc-dev libsqlite3-dev \
-            pkg-config autoconf libtool zip unzip libncurses5-dev libgdbm-dev libnss3-dev \
-            libreadline-dev tk-dev libbz2-dev libltdl-dev libunwind-dev
-
-      - name: Install Python dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install "cython<3.0.0" buildozer
-
       - name: Build with Buildozer
         env:
           JAVA_OPTS: "-Xmx2048m"
           GRADLE_OPTS: "-Dorg.gradle.jvmargs=-Xmx2048m"
         run: |
-          # 1. 빌드 캐시 초기화
           buildozer android clean || true
           
-          # 2. buildozer.spec 자동 수정
-          # requirements 설정 (kivy, requests 등 포함)
-          sed -i 's|^requirements =.*|requirements = python3,kivy==2.2.1,requests,certifi,openssl,hostpython3|' buildozer.spec
+          # 1. 화면 방향을 'portrait(세로)'로 강제 수정
+          sed -i 's/^[# ]*orientation =.*/orientation = portrait/' buildozer.spec
           
-          # 기타 필수 설정
+          # 2. 필수 라이브러리(PyPDF2, deep_translator 등) 주입 - 이 부분이 없으면 무조건 튕깁니다.
+          sed -i 's|^requirements =.*|requirements = python3,kivy==2.2.1,PyPDF2,deep_translator,requests,certifi,urllib3,idna,charset-normalizer,hostpython3|' buildozer.spec
+          
+          # 3. 권한 설정 주입
+          sed -i 's/^[# ]*android.permissions =.*/android.permissions = READ_EXTERNAL_STORAGE,WRITE_EXTERNAL_STORAGE,INTERNET/' buildozer.spec
+          
+          # 4. 기타 필수 설정
           sed -i 's/^[# ]*version =.*/version = 1.0.0/' buildozer.spec
           sed -i 's/^[# ]*android.archs =.*/android.archs = arm64-v8a/' buildozer.spec
           sed -i 's/^[# ]*android.accept_sdk_license =.*/android.accept_sdk_license = True/' buildozer.spec
           
-          # 3. 빌드 실행
           export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:.
           yes y | buildozer -v android debug
-
-      - name: Upload APK
-        uses: actions/upload-artifact@v4
-        with:
-          name: my-app-apk
-          path: bin/*.apk
