--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,6 @@ jobs:
       - name: Install system dependencies
         run: |
           sudo apt-get update
-          # libunwind-dev를 명시적으로 추가하여 의존성 오류를 해결합니다.
           sudo apt-get install -y build-essential git python3-dev libsdl2-dev libsdl2-image-dev \
             libsdl2-mixer-dev libsdl2-ttf-dev libportmidi-dev libswscale-dev libavformat-dev \
             libavcodec-dev zlib1g-dev libffi-dev libssl-dev libutf8proc-dev libsqlite3-dev \
@@ -50,19 +49,14 @@ jobs:
           JAVA_OPTS: "-Xmx2048m"
           GRADLE_OPTS: "-Dorg.gradle.jvmargs=-Xmx2048m"
         run: |
-          # 1. 빌드 캐시 초기화
           buildozer android clean || true
           
-          # 2. buildozer.spec 자동 수정
-          # requirements 설정 (kivy, requests 등 포함)
-          sed -i 's|^requirements =.*|requirements = python3,kivy==2.2.1,requests,certifi,openssl,hostpython3|' buildozer.spec
+          sed -i 's|^requirements =.*|requirements = python3,kivy==2.2.1,requests,certifi,openssl,hostpython3,pypdf2,deep-translator|' buildozer.spec
           
-          # 기타 필수 설정
           sed -i 's/^[# ]*version =.*/version = 1.0.0/' buildozer.spec
           sed -i 's/^[# ]*android.archs =.*/android.archs = arm64-v8a/' buildozer.spec
           sed -i 's/^[# ]*android.accept_sdk_license =.*/android.accept_sdk_license = True/' buildozer.spec
           
-          # 3. 빌드 실행
           export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:.
           yes y | buildozer -v android debug
       - name: Upload APK
