--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,7 @@ jobs:
           sudo docker image prune -a -f
           sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc
           sudo apt-get clean
+          
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
@@ -39,11 +40,13 @@ jobs:
             libsdl2-mixer-dev libsdl2-ttf-dev libportmidi-dev libswscale-dev libavformat-dev \
             libavcodec-dev zlib1g-dev libffi-dev libssl-dev libutf8proc-dev libsqlite3-dev \
             pkg-config autoconf libtool zip unzip libncurses5-dev libgdbm-dev libnss3-dev \
-            libreadline-dev tk-dev libbz2-dev libltdl-dev libunwind-dev
+            libreadline-dev tk-dev libbz2-dev libltdl-dev libunwind-dev ant
+            
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
           pip install "cython<3.0.0" buildozer
+          
       - name: Build with Buildozer
         env:
           JAVA_OPTS: "-Xmx2048m"
@@ -59,6 +62,7 @@ jobs:
           
           export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:.
           yes y | buildozer -v android debug
+          
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
