--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,10 +55,12 @@ jobs:
           buildozer android clean || true
           
           sed -i 's|^requirements =.*|requirements = python3,kivy==2.2.1,requests,certifi,openssl,hostpython3,pypdf2,deep-translator|' buildozer.spec
-          
           sed -i 's/^[# ]*version =.*/version = 1.0.0/' buildozer.spec
+          sed -i 's/^[# ]*orientation =.*/orientation = portrait/' buildozer.spec
+          sed -i 's/^[# ]*fullscreen =.*/fullscreen = 0/' buildozer.spec
           sed -i 's/^[# ]*android.archs =.*/android.archs = arm64-v8a/' buildozer.spec
           sed -i 's/^[# ]*android.accept_sdk_license =.*/android.accept_sdk_license = True/' buildozer.spec
+          sed -i 's/^[# ]*android.permissions =.*/android.permissions = INTERNET,READ_EXTERNAL_STORAGE,WRITE_EXTERNAL_STORAGE/' buildozer.spec
           
           export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:.
           yes y | buildozer -v android debug
