--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,8 +54,8 @@ jobs:
         run: |
           buildozer android clean || true
           
-          sed -i 's|^requirements =.*|requirements = python3,kivy==2.2.1,requests,certifi,openssl,hostpython3,pypdf2,deep-translator|' buildozer.spec
-          sed -i 's/^[# ]*version =.*/version = 1.0.0/' buildozer.spec
+          sed -i 's|^requirements =.*|requirements = python3,kivy==2.2.1,PyPDF2==3.0.1|' buildozer.spec
+          sed -i 's/^[# ]*version =.*/version = 1.0.4/' buildozer.spec
           sed -i 's/^[# ]*orientation =.*/orientation = portrait/' buildozer.spec
           sed -i 's/^[# ]*fullscreen =.*/fullscreen = 0/' buildozer.spec
           sed -i 's/^[# ]*android.archs =.*/android.archs = arm64-v8a/' buildozer.spec
