--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,7 +55,7 @@ jobs:
           buildozer android clean || true
           
           sed -i 's|^requirements =.*|requirements = python3,kivy==2.2.1,PyPDF2==3.0.1,pyjnius|' buildozer.spec
-          sed -i 's/^[# ]*version =.*/version = 1.0.9/' buildozer.spec
+          sed -i 's/^[# ]*version =.*/version = 1.1.0/' buildozer.spec
           sed -i 's/^[# ]*android.api =.*/android.api = 28/' buildozer.spec
           sed -i 's/^[# ]*orientation =.*/orientation = portrait/' buildozer.spec
           sed -i 's/^[# ]*fullscreen =.*/fullscreen = 0/' buildozer.spec
@@ -69,5 +69,5 @@ jobs:
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
-          name: myapp-v1.0.9
+          name: myapp-v1.1.0-debug
           path: bin/*.apk
