--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build APK
+name: Build Medical Translator APK
 
 on:
   push:
@@ -12,6 +12,7 @@ concurrency:
 jobs:
   build:
     runs-on: ubuntu-22.04
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -21,6 +22,7 @@ jobs:
           sudo docker image prune -a -f
           sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc
           sudo apt-get clean
+          df -h
           
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -55,7 +57,7 @@ jobs:
           buildozer android clean || true
           
           sed -i 's|^requirements =.*|requirements = python3,kivy==2.2.1,PyPDF2==3.0.1,pyjnius|' buildozer.spec
-          sed -i 's/^[# ]*version =.*/version = 1.2.0/' buildozer.spec
+          sed -i 's/^[# ]*version =.*/version = 1.3.0/' buildozer.spec
           sed -i 's/^[# ]*android.api =.*/android.api = 28/' buildozer.spec
           sed -i 's/^[# ]*orientation =.*/orientation = portrait/' buildozer.spec
           sed -i 's/^[# ]*fullscreen =.*/fullscreen = 0/' buildozer.spec
@@ -66,8 +68,22 @@ jobs:
           export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:.
           yes y | buildozer -v android debug
           
-      - name: Upload APK
+      - name: List output files
+        run: |
+          echo "=== Build output ==="
+          ls -lh bin/ || echo "No bin directory"
+          
+      - name: Upload Debug APK
         uses: actions/upload-artifact@v4
         with:
-          name: myapp-v1.2.0-debug
+          name: medical-translator-v1.3.0-debug
           path: bin/*.apk
+          retention-days: 30
+          
+      - name: Upload Build Logs
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: build-logs
+          path: .buildozer/android/platform/build-*/build/outputs/logs/
+          retention-days: 7
