--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build Medical Translator APK
+name: Build Medical Translator v1.4.0
 
 on:
   push:
@@ -57,7 +57,7 @@ jobs:
           buildozer android clean || true
           
           sed -i 's|^requirements =.*|requirements = python3,kivy==2.2.1,PyPDF2==3.0.1,pyjnius|' buildozer.spec
-          sed -i 's/^[# ]*version =.*/version = 1.3.0/' buildozer.spec
+          sed -i 's/^[# ]*version =.*/version = 1.4.0/' buildozer.spec
           sed -i 's/^[# ]*android.api =.*/android.api = 28/' buildozer.spec
           sed -i 's/^[# ]*orientation =.*/orientation = portrait/' buildozer.spec
           sed -i 's/^[# ]*fullscreen =.*/fullscreen = 0/' buildozer.spec
@@ -73,17 +73,9 @@ jobs:
           echo "=== Build output ==="
           ls -lh bin/ || echo "No bin directory"
           
-      - name: Upload Debug APK
+      - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
-          name: medical-translator-v1.3.0-debug
+          name: medical-translator-v1.4.0-ssl-fixed
           path: bin/*.apk
           retention-days: 30
-          
-      - name: Upload Build Logs
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: build-logs
-          path: .buildozer/android/platform/build-*/build/outputs/logs/
-          retention-days: 7
